--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node_1": "nodemon app.js 5000 http://localhost:5000",
-    "node_2": "nodemon app.js 5001 http://localhost:5001",
-    "node_3": "nodemon app.js 5002 http://localhost:5002",
-    "node_4": "nodemon app.js 5003 http://localhost:5003",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js https://blockland.herokuapp.com/"
   },
   "keywords": [],
   "author": "",
