--- a/app/config/config.json
+++ b/app/config/config.json
@@ -6,11 +6,11 @@
     },
     "development": {
         "PORT": 8000,
-        "MONGODB_URI": "mongodb+srv://elraphty:Elraphty1@desertcolonel-1-7nh9k.mongodb.net/test",
+        "MONGODB_URI": "mongodb+srv://elraphty:Elraphty1@desertcolonel-1-7nh9k.mongodb.net/blockchain",
         "JWT_SECRET": "pojiaj234oi234oij234oij4"
     },
     "production": {
-        "MONGODB_URI": "mongodb+srv://elraphty:Elraphty1@desertcolonel-1-7nh9k.mongodb.net/test?retryWrites=true&w=majority",
+        "MONGODB_URI": "mongodb+srv://elraphty:Elraphty1@desertcolonel-1-7nh9k.mongodb.net/blockchain",
         "JWT_SECRET": "pojiaj234oi234oij234oij4"
     }
 }
