--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js https://blockland.herokuapp.com/"
+    "start": "nodemon app.js 5000 http://localhost:5000 NODE_ENV=development"
   },
   "keywords": [],
   "author": "",
