--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js 5000 https://blockland.herokuapp.com NODE_ENV=production"
+    "start": "node app.js 5000 https://blockland.herokuapp.com NODE_ENV=production"
   },
   "keywords": [],
   "author": "",
