--- a/app/config/config.json
+++ b/app/config/config.json
@@ -6,7 +6,7 @@
     },
     "development": {
         "PORT": 8000,
-        "MONGODB_URI": "mongodb+srv://elraphty:Elraphty1@dc-2-i3far.gcp.mongodb.net/blockchain?retryWrites=true&w=majority",
+        "MONGODB_URI": "mongodb://localhost:27017/blockchain",
         "JWT_SECRET": "pojiaj234oi234oij234oij4"
     },
     "production": {
